--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer clearfix hidden-xs-down">
+<footer class="footer clearfix hidden-sm-down">
     <div class="float-xs-left footer-content">
         <img class="footer-logo" [src]="logo" alt="Willis Towers Watson">
         <a class="footer-link" href="#">Terms of Service</a>
@@ -6,19 +6,24 @@
         <a class="footer-link" href="#">Contact Us</a>
     </div>
     <div class="float-xs-right">
-        <small class="footer-copyright">&copy; 2017 Willis Towers Watson</small>
+        <small class="footer-copyright">Copyright &copy; 2018 Willis Towers Watson. All rights reserved</small>
     </div>
 </footer>
 <footer class="footer clearfix hidden-md-up">
-    <div class="float-xs-left footer-content">
+    <!-- <div class="float-xs-left footer-content">
         <ul>
             <li><img class="footer-logo" [src]="logo" alt="Willis Towers Watson"></li>
-            <li><a class="footer-link" href="#">Terms of Service</a></li>
-            <li><a class="footer-link" href="#">Privacy Policy</a></li>
-            <li><a class="footer-link" href="#">Contact Us</a></li>
+            <li><a class="footer-link" href="#">Privacy and Cookies</a></li>
+            <li><a class="footer-link" href="#">Support</a></li>
         </ul>
+    </div> -->
+    <div class="float-xs-left footer-content">
+        <img class="footer-logo" [src]="logo" alt="Willis Towers Watson" /><br>
+        <a class="footer-link" href="#">Terms of Service</a><br>
+        <a class="footer-link" href="#">Privacy and Cookies</a><br>
+        <a class="footer-link" href="#">Support</a>
     </div>
-    <div class="text-xs-center">
-        <small class="footer-copyright">&copy; 2017 Willis Towers Watson</small>
+    <div class="text-xs-right">
+        <small class="footer-copyright">Copyright &copy; 2018 Willis Towers Watson. All rights reserved</small>
     </div>
 </footer>
