--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,4 +1,7 @@
-@media screen and (max-width: 470px) {
+.footer .footer-content {
+    width: 65%;
+}
+@media screen and (max-width: 768px) {
     .footer {
         background-color: #f5f5f5;
         /*font-size: 0.55rem;*/
@@ -19,7 +22,7 @@
     .footer .footer-link {
         color: #6f2a80;
         font-weight: 500;
-        margin-left: 1rem;
+        margin-left: 0rem;
     }
     ul {
         list-style-type: none;
