--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,7 +178,7 @@
                             </a>
                         </li>
                     </ul>
-                    <ul id="activeAdmin" #activeAdmin class="nav-vertical-dark nav-vertical-submenu admin-submenu active">
+                    <ul id="activeAdmin" #activeAdmin class="nav-vertical-dark nav-vertical-submenu admin-submenu">
                         <li>
                             <a routerLink="disclaimers" routerLinkActive="active">
                                 <span>Subscription Dashboard</span>
