--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,8 +2,8 @@
     <div class="float-xs-left footer-content">
         <img class="footer-logo" [src]="logo" alt="Willis Towers Watson">
         <a class="footer-link" href="#">Terms of Service</a>
-        <a class="footer-link" href="#">Privacy Policy</a>
-        <a class="footer-link" href="#">Contact Us</a>
+        <a class="footer-link" href="#">Privacy and Cookies</a>
+        <a class="footer-link" href="#">Support</a>
     </div>
     <div class="float-xs-right">
         <small class="footer-copyright">Copyright &copy; 2018 Willis Towers Watson. All rights reserved</small>
